k8s/deployment04.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-volume-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-volume-deployment
  template:
    metadata:
      labels:
        app: shared-volume-deployment
    spec:
      containers:
      - name: loggen
        image: svinopterix/loggen:v1.1
        volumeMounts:
        - mountPath: /shared
          name: shared-volume
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: shared-volume
          mountPath: /shared          
      volumes:
      - name: shared-volume
        persistentVolumeClaim:
          claimName: host-directory-pvc      

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-service
spec:
  selector:
    app: shared-volume-deployment
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
