k8s/netology-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echoserver
  labels: 
    app: netology-web
spec:
  containers:
  - name: echoserver
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    ports:
    - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: netology-web
spec:
  selector:
    app: netology-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
