k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      nodePort: 30101
    - name: multitool-port
      protocol: TCP
      port: 8080
      nodePort: 30102
